Did CRUD on all four collections
